--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,12 @@ install:
   - sudo apt-get install luarocks
   - mkdir -p ~/.luarocks
   - echo 'rocks_servers = { "http://rocks.moonscript.org" }' > ~/.luarocks/config.lua
-  - sudo luarocks install https://rocks.moonscript.org/manifests/olivine-labs/busted-1.11.1-1.rockspec
+  - sudo luarocks install https://rocks.moonscript.org/manifests/olivine-labs/busted-2.0.rc7-0.rockspec
   - sudo luarocks install moonscript
   - sudo luarocks install luacrypto
   - sudo luarocks install luaposix
-  - sudo luarocks install https://raw.githubusercontent.com/leafo/lua-date/master/date-dev-1.rockspec
+  - sudo luarocks install date
   - sudo luarocks make
   - ./install_luajit.sh
 
-script: busted -l ./luajit
+script: busted
